@@ -67,6 +67,8 @@
     <Compile Include="DSP\AbstractDSPNode.cs" />
     <Compile Include="DSP\APFDspNode.cs" />
     <Compile Include="DSP\CompressorDspNode.cs" />
+    <Compile Include="DSP\AutoWahDspNode.cs" />
+    <Compile Include="DSP\ChorusDspNode.cs" />
     <Compile Include="DSP\LPFDspNode.cs" />
     <Compile Include="DSP\ReverbDspNode.cs" />
     <Compile Include="DSP\EchoDspNode.cs" />
