@@ -1,13 +1,13 @@
-<!DOCTYPE PATCH  SYSTEM "http://vvvv.org/versions/vvvv40beta17.dtd" >
+<!DOCTYPE PATCH  SYSTEM "http://vvvv.org/versions/vvvv40beta18.dtd" >
    <PATCH nodename="D:\repositories\vvvv\plugins\c#\Bass\trunk\Samples\Bass\RMS (Bass).v4p">
    <BOUNDS height="8775" left="4950" top="1575" type="Window" width="10215">
    </BOUNDS>
-   <NODE componentmode="Hidden" id="18" nodename=":PLUGINS:\BassSound.dll|BassSound.Streams.BassFileStreamNode">
-   <BOUNDS height="0" left="2940" top="1410" type="Node" width="0">
+   <NODE componentmode="Hidden" id="19" nodename=":PLUGINS:\BassSound.dll|BassSound.Streams.BassFileStreamNode">
+   <BOUNDS height="0" left="4335" top="1380" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="0" left="7230" top="5220" type="Window" width="0">
    </BOUNDS>
-   <BOUNDS height="0" left="2940" top="1410" type="Box" width="0">
+   <BOUNDS height="0" left="4335" top="1380" type="Box" width="0">
    </BOUNDS>
    <PIN pinname="Handle" visible="1">
    </PIN>
@@ -30,24 +30,24 @@
    <PIN pinname="File Name" visible="1">
    </PIN>
    </NODE>
-   <NODE componentmode="Hidden" id="17" nodename=":PLUGINS:\BassSound.dll|BassSound.BassAudioOutNode">
-   <BOUNDS height="0" left="4545" top="3105" type="Node" width="0">
+   <NODE componentmode="Hidden" id="18" nodename=":PLUGINS:\BassSound.dll|BassSound.BassAudioOutNode">
+   <BOUNDS height="0" left="5940" top="3075" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="0" left="7530" top="7035" type="Window" width="0">
    </BOUNDS>
-   <BOUNDS height="0" left="4545" top="3105" type="Box" width="0">
+   <BOUNDS height="0" left="5940" top="3075" type="Box" width="0">
    </BOUNDS>
    <PIN pinname="HandleIn" visible="1">
    </PIN>
    <PIN pinname="Handles In" visible="1">
    </PIN>
    </NODE>
-   <NODE componentmode="InABox" id="16" nodename="IOBox (String)">
-   <BOUNDS height="0" left="4365" top="450" type="Node" width="0">
+   <NODE componentmode="InABox" id="17" nodename="IOBox (String)">
+   <BOUNDS height="0" left="5760" top="420" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="160" left="9480" top="5625" type="Window" width="215">
    </BOUNDS>
-   <BOUNDS height="240" left="4365" top="450" type="Box" width="2985">
+   <BOUNDS height="240" left="5760" top="420" type="Box" width="2985">
    </BOUNDS>
    <PIN pinname="Output String" visible="1">
    </PIN>
@@ -56,12 +56,12 @@
    <PIN pinname="Descriptive Name" slicecount="1" values="|File Name|">
    </PIN>
    </NODE>
-   <NODE componentmode="InABox" id="15" nodename="IOBox (Value Advanced)">
-   <BOUNDS height="0" left="1665" top="285" type="Node" width="0">
+   <NODE componentmode="InABox" id="16" nodename="IOBox (Value Advanced)">
+   <BOUNDS height="0" left="3060" top="255" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="160" left="7095" top="5835" type="Window" width="215">
    </BOUNDS>
-   <BOUNDS height="465" left="1665" top="285" type="Box" width="690">
+   <BOUNDS height="465" left="3060" top="255" type="Box" width="690">
    </BOUNDS>
    <PIN pinname="Y Output Value" visible="1">
    </PIN>
@@ -82,14 +82,14 @@
    <PIN pinname="Y Input Value" slicecount="1" values="0">
    </PIN>
    </NODE>
-   <LINK dstnodeid="18" dstpinname="Play" srcnodeid="15" srcpinname="Y Output Value">
+   <LINK dstnodeid="19" dstpinname="Play" srcnodeid="16" srcpinname="Y Output Value">
    </LINK>
-   <NODE componentmode="InABox" id="14" nodename="IOBox (Value Advanced)">
-   <BOUNDS height="0" left="2970" top="270" type="Node" width="0">
+   <NODE componentmode="InABox" id="15" nodename="IOBox (Value Advanced)">
+   <BOUNDS height="0" left="4365" top="240" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="160" left="8550" top="6285" type="Window" width="215">
    </BOUNDS>
-   <BOUNDS height="465" left="2970" top="270" type="Box" width="690">
+   <BOUNDS height="465" left="4365" top="240" type="Box" width="690">
    </BOUNDS>
    <PIN pinname="Y Output Value" visible="1">
    </PIN>
@@ -110,14 +110,14 @@
    <PIN pinname="Y Input Value" slicecount="1" values="0">
    </PIN>
    </NODE>
-   <LINK dstnodeid="18" dstpinname="Mono" srcnodeid="14" srcpinname="Y Output Value">
+   <LINK dstnodeid="19" dstpinname="Mono" srcnodeid="15" srcpinname="Y Output Value">
    </LINK>
-   <NODE componentmode="Hidden" id="13" nodename=":PLUGINS:\BassSound.dll|vvvv.Nodes.RMSNode">
-   <BOUNDS height="0" left="1650" top="2685" type="Node" width="0">
+   <NODE componentmode="Hidden" id="14" nodename=":PLUGINS:\BassSound.dll|vvvv.Nodes.RMSNode">
+   <BOUNDS height="0" left="3045" top="2655" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="0" left="7695" top="6855" type="Window" width="0">
    </BOUNDS>
-   <BOUNDS height="0" left="1650" top="2685" type="Box" width="0">
+   <BOUNDS height="0" left="3045" top="2655" type="Box" width="0">
    </BOUNDS>
    <PIN pinname="HandleIn" visible="1">
    </PIN>
@@ -128,8 +128,8 @@
    <PIN pinname="Handle In" visible="1">
    </PIN>
    </NODE>
-   <NODE id="12" nodename="Queue (Spreads)">
-   <BOUNDS height="0" left="1305" top="3270" type="Node" width="0">
+   <NODE id="13" nodename="Queue (Spreads)">
+   <BOUNDS height="0" left="2700" top="3240" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="do Insert" slicecount="1" values="1">
    </PIN>
@@ -140,40 +140,10 @@
    <PIN pinname="Output" visible="1">
    </PIN>
    </NODE>
-   <LINK dstnodeid="12" dstpinname="Input" srcnodeid="13" srcpinname="RMS">
+   <LINK dstnodeid="13" dstpinname="Input" srcnodeid="14" srcpinname="RMS">
    </LINK>
-   <NODE id="11" nodename="Map (Value)">
-   <BOUNDS height="0" left="1020" top="3810" type="Node" width="0">
-   </BOUNDS>
-   <PIN pinname="Input" visible="1">
-   </PIN>
-   <PIN pinname="Source Minimum" slicecount="1" values="-50">
-   </PIN>
-   <PIN pinname="Source Maximum" slicecount="1" values="0">
-   </PIN>
-   <PIN pinname="Destination Minimum" slicecount="1" values="-1">
-   </PIN>
-   <PIN pinname="Output" visible="1">
-   </PIN>
-   </NODE>
-   <LINK dstnodeid="11" dstpinname="Input" srcnodeid="12" srcpinname="Output">
-   </LINK>
-   <NODE id="10" nodename="Map (Value)">
-   <BOUNDS height="0" left="2100" top="3825" type="Node" width="0">
-   </BOUNDS>
-   <PIN pinname="Input" visible="1">
-   </PIN>
-   <PIN pinname="Source Minimum" slicecount="1" values="-50">
-   </PIN>
-   <PIN pinname="Source Maximum" slicecount="1" values="0">
-   </PIN>
-   <PIN pinname="Destination Minimum" slicecount="1" values="-1">
-   </PIN>
-   <PIN pinname="Output" visible="1">
-   </PIN>
-   </NODE>
-   <NODE id="9" nodename="Queue (Spreads)">
-   <BOUNDS height="0" left="2100" top="3270" type="Node" width="0">
+   <NODE id="10" nodename="Queue (Spreads)">
+   <BOUNDS height="0" left="3495" top="3240" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="do Insert" slicecount="1" values="1">
    </PIN>
@@ -184,24 +154,22 @@
    <PIN pinname="Output" visible="1">
    </PIN>
    </NODE>
-   <LINK dstnodeid="9" dstpinname="Input" srcnodeid="13" srcpinname="Average">
+   <LINK dstnodeid="10" dstpinname="Input" srcnodeid="14" srcpinname="Average">
    </LINK>
-   <LINK dstnodeid="10" dstpinname="Input" srcnodeid="9" srcpinname="Output">
-   </LINK>
-   <NODE componentmode="InABox" id="8" nodename="Renderer (GDI)">
-   <BOUNDS height="0" left="2085" top="5745" type="Node" width="0">
+   <NODE componentmode="InABox" id="9" nodename="Renderer (GDI)">
+   <BOUNDS height="0" left="3480" top="5715" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="4860" left="7995" top="9540" type="Window" width="6120">
    </BOUNDS>
-   <BOUNDS height="2490" left="2085" top="5745" type="Box" width="6060">
+   <BOUNDS height="2490" left="3480" top="5715" type="Box" width="6060">
    </BOUNDS>
    <PIN pinname="Layers" visible="1">
    </PIN>
    <PIN pinname="Background Color" visible="1">
    </PIN>
    </NODE>
-   <NODE id="7" nodename="Point (GDI)">
-   <BOUNDS height="0" left="735" top="4845" type="Node" width="0">
+   <NODE id="8" nodename="POINT (GDI)">
+   <BOUNDS height="0" left="2130" top="4815" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Y" visible="1">
    </PIN>
@@ -211,11 +179,11 @@
    </PIN>
    <PIN pinname="Type" slicecount="1" values="Pixel">
    </PIN>
-   <PIN pinname="Color" visible="1">
+   <PIN pinname="Pen Color" visible="1">
    </PIN>
    </NODE>
-   <NODE id="6" nodename="Point (GDI)">
-   <BOUNDS height="0" left="2205" top="4770" type="Node" width="0">
+   <NODE id="7" nodename="POINT (GDI)">
+   <BOUNDS height="0" left="3600" top="4740" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Y" visible="1">
    </PIN>
@@ -225,11 +193,11 @@
    </PIN>
    <PIN pinname="X" visible="1">
    </PIN>
-   <PIN pinname="Color" visible="1">
+   <PIN pinname="Pen Color" visible="1">
    </PIN>
    </NODE>
-   <NODE id="5" nodename="LinearSpread (Spreads)">
-   <BOUNDS height="0" left="3225" top="3780" type="Node" width="0">
+   <NODE id="6" nodename="LinearSpread (Spreads)">
+   <BOUNDS height="0" left="4620" top="3750" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Spread Count" visible="1">
    </PIN>
@@ -238,12 +206,12 @@
    <PIN pinname="Width" slicecount="1" values="2">
    </PIN>
    </NODE>
-   <NODE componentmode="InABox" id="4" nodename="IOBox (Value Advanced)">
-   <BOUNDS height="0" left="2850" top="2550" type="Node" width="0">
+   <NODE componentmode="InABox" id="5" nodename="IOBox (Value Advanced)">
+   <BOUNDS height="0" left="4245" top="2520" type="Node" width="0">
    </BOUNDS>
    <BOUNDS height="160" left="8190" top="5385" type="Window" width="215">
    </BOUNDS>
-   <BOUNDS height="240" left="2850" top="2550" type="Box" width="795">
+   <BOUNDS height="240" left="4245" top="2520" type="Box" width="795">
    </BOUNDS>
    <PIN pinname="Descriptive Name" slicecount="1" values="|Queue Size|">
    </PIN>
@@ -252,20 +220,16 @@
    <PIN pinname="Y Output Value" visible="1">
    </PIN>
    </NODE>
-   <LINK dstnodeid="7" dstpinname="Y" srcnodeid="11" srcpinname="Output">
+   <LINK dstnodeid="13" dstpinname="Frame Count" srcnodeid="5" srcpinname="Y Output Value">
    </LINK>
-   <LINK dstnodeid="6" dstpinname="Y" srcnodeid="10" srcpinname="Output">
+   <LINK dstnodeid="10" dstpinname="Frame Count" srcnodeid="5" srcpinname="Y Output Value">
    </LINK>
-   <LINK dstnodeid="12" dstpinname="Frame Count" srcnodeid="4" srcpinname="Y Output Value">
+   <LINK dstnodeid="6" dstpinname="Spread Count" srcnodeid="5" srcpinname="Y Output Value">
    </LINK>
-   <LINK dstnodeid="9" dstpinname="Frame Count" srcnodeid="4" srcpinname="Y Output Value">
+   <LINK dstnodeid="8" dstpinname="X" srcnodeid="6" srcpinname="Output">
    </LINK>
-   <LINK dstnodeid="5" dstpinname="Spread Count" srcnodeid="4" srcpinname="Y Output Value">
-   </LINK>
-   <LINK dstnodeid="7" dstpinname="X" srcnodeid="5" srcpinname="Output">
-   </LINK>
-   <NODE id="3" nodename="Group (GDI)">
-   <BOUNDS height="0" left="1665" top="5280" type="Node" width="0">
+   <NODE id="4" nodename="Group (GDI)">
+   <BOUNDS height="0" left="3060" top="5250" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Layer 1" visible="1">
    </PIN>
@@ -274,16 +238,16 @@
    <PIN pinname="Layer 2" visible="1">
    </PIN>
    </NODE>
-   <LINK dstnodeid="3" dstpinname="Layer 1" srcnodeid="7" srcpinname="Layer">
+   <LINK dstnodeid="4" dstpinname="Layer 1" srcnodeid="8" srcpinname="Layer">
    </LINK>
-   <LINK dstnodeid="8" dstpinname="Layers" srcnodeid="3" srcpinname="Layer">
+   <LINK dstnodeid="9" dstpinname="Layers" srcnodeid="4" srcpinname="Layer">
    </LINK>
-   <LINK dstnodeid="3" dstpinname="Layer 2" srcnodeid="6" srcpinname="Layer">
+   <LINK dstnodeid="4" dstpinname="Layer 2" srcnodeid="7" srcpinname="Layer">
    </LINK>
-   <LINK dstnodeid="6" dstpinname="X" srcnodeid="5" srcpinname="Output">
+   <LINK dstnodeid="7" dstpinname="X" srcnodeid="6" srcpinname="Output">
    </LINK>
-   <NODE id="2" nodename="RGB (Color Join)">
-   <BOUNDS height="0" left="3030" top="4380" type="Node" width="0">
+   <NODE id="3" nodename="RGB (Color Join)">
+   <BOUNDS height="0" left="4425" top="4350" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Output" visible="1">
    </PIN>
@@ -294,18 +258,18 @@
    <PIN pinname="Blue" slicecount="1" values="1">
    </PIN>
    </NODE>
-   <LINK dstnodeid="6" dstpinname="Color" srcnodeid="2" srcpinname="Output">
+   <LINK dstnodeid="7" dstpinname="Pen Color" srcnodeid="3" srcpinname="Output">
    </LINK>
-   <NODE id="1" nodename="RGB (Color Join)">
-   <BOUNDS height="0" left="3645" top="5220" type="Node" width="0">
+   <NODE id="2" nodename="RGB (Color Join)">
+   <BOUNDS height="0" left="5040" top="5190" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Output" visible="1">
    </PIN>
    <PIN pinname="Blue" slicecount="1" values="1">
    </PIN>
    </NODE>
-   <NODE id="0" nodename="RGB (Color Join)">
-   <BOUNDS height="0" left="1560" top="4485" type="Node" width="0">
+   <NODE id="1" nodename="RGB (Color Join)">
+   <BOUNDS height="0" left="2955" top="4455" type="Node" width="0">
    </BOUNDS>
    <PIN pinname="Output" visible="1">
    </PIN>
@@ -316,14 +280,60 @@
    <PIN pinname="Blue" slicecount="1" values="0">
    </PIN>
    </NODE>
-   <LINK dstnodeid="7" dstpinname="Color" srcnodeid="0" srcpinname="Output">
+   <LINK dstnodeid="8" dstpinname="Pen Color" srcnodeid="1" srcpinname="Output">
    </LINK>
-   <LINK dstnodeid="8" dstpinname="Background Color" srcnodeid="1" srcpinname="Output">
+   <LINK dstnodeid="9" dstpinname="Background Color" srcnodeid="2" srcpinname="Output">
    </LINK>
-   <LINK srcnodeid="18" srcpinname="Handle Out" dstnodeid="13" dstpinname="Handle In">
+   <LINK dstnodeid="14" dstpinname="Handle In" srcnodeid="19" srcpinname="Handle Out">
    </LINK>
-   <LINK srcnodeid="18" srcpinname="Handle Out" dstnodeid="17" dstpinname="Handles In">
+   <LINK dstnodeid="18" dstpinname="Handles In" srcnodeid="19" srcpinname="Handle Out">
    </LINK>
-   <LINK srcnodeid="16" srcpinname="Output String" dstnodeid="18" dstpinname="File Name">
+   <LINK dstnodeid="19" dstpinname="File Name" srcnodeid="17" srcpinname="Output String">
+   </LINK>
+   <NODE nodename="Multiply (Value)" id="20">
+   <BOUNDS type="Node" left="2145" top="3945" width="0" height="0">
+   </BOUNDS>
+   <PIN pinname="Input 2" visible="1">
+   </PIN>
+   <PIN pinname="Output" visible="1">
+   </PIN>
+   <PIN pinname="Input 1" visible="1">
+   </PIN>
+   </NODE>
+   <NODE nodename="Multiply (Value)" id="21">
+   <BOUNDS type="Node" left="3165" top="3930" width="0" height="0">
+   </BOUNDS>
+   <PIN pinname="Input 2" visible="1">
+   </PIN>
+   <PIN pinname="Output" visible="1">
+   </PIN>
+   <PIN pinname="Input 1" visible="1">
+   </PIN>
+   </NODE>
+   <LINK srcnodeid="10" srcpinname="Output" dstnodeid="21" dstpinname="Input 2">
+   </LINK>
+   <LINK srcnodeid="21" srcpinname="Output" dstnodeid="7" dstpinname="Y">
+   </LINK>
+   <LINK srcnodeid="13" srcpinname="Output" dstnodeid="20" dstpinname="Input 2">
+   </LINK>
+   <LINK srcnodeid="20" srcpinname="Output" dstnodeid="8" dstpinname="Y">
+   </LINK>
+   <NODE nodename="IOBox (Value Advanced)" componentmode="InABox" id="22">
+   <BOUNDS type="Node" left="705" top="3300" width="0" height="0">
+   </BOUNDS>
+   <BOUNDS type="Window" left="5925" top="6090" width="215" height="160">
+   </BOUNDS>
+   <BOUNDS type="Box" left="705" top="3300" width="795" height="240">
+   </BOUNDS>
+   <PIN pinname="Descriptive Name" slicecount="1" values="|RMS Gain|">
+   </PIN>
+   <PIN pinname="Y Input Value" slicecount="1" values="2">
+   </PIN>
+   <PIN pinname="Y Output Value" visible="1">
+   </PIN>
+   </NODE>
+   <LINK srcnodeid="22" srcpinname="Y Output Value" dstnodeid="20" dstpinname="Input 1">
+   </LINK>
+   <LINK srcnodeid="22" srcpinname="Y Output Value" dstnodeid="21" dstpinname="Input 1">
    </LINK>
    </PATCH>
