@@ -2,6 +2,8 @@ New Version (number not defined yet)
 -Added base encoder node.
 -Added Ogg encoder node.
 -Added IceCast broadcast node (Works with Ogg as Lame doesn't work with 32bit floating point data).
+-Added lot of DSP.
+-RMS Node now returns the normalized float value (between 0 and 1), instead of decibels version.
 
 
 Version 0.4
